--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Sep 22 2021 00:15:14 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Sep 22 2021 01:27:13 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="606def14871f33430a720657" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -24,9 +24,9 @@
       </a>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="index.html" aria-current="page" class="nav-link w-nav-link w--current">Home</a>
-        <a href="#aboutv" class="nav-link w-nav-link">About</a>
-        <a href="#vwork" class="nav-link w-nav-link">Work</a>
-        <a href="#contactv" class="nav-link w-nav-link">Contact</a>
+        <a href="/#aboutv" class="nav-link w-nav-link">About</a>
+        <a href="/#vwork" class="nav-link w-nav-link">Work</a>
+        <a href="/#contactv" class="nav-link w-nav-link">Contact</a>
       </nav>
       <div class="menu-button w-nav-button">
         <div class="w-icon-nav-menu"></div>
