--- a/work/city-of-dallas-financial-transparency-website.html
+++ b/work/city-of-dallas-financial-transparency-website.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Sep 22 2021 00:15:14 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Sep 22 2021 01:27:13 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="614a69cdc01f0f7edcc5d810" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -26,9 +26,9 @@
       </a>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="../index.html" class="nav-link w-nav-link">Home</a>
-        <a href="#aboutv" class="nav-link w-nav-link">About</a>
-        <a href="#vwork" class="nav-link w-nav-link">Work</a>
-        <a href="#contactv" class="nav-link w-nav-link">Contact</a>
+        <a href="/#aboutv" class="nav-link w-nav-link">About</a>
+        <a href="/#vwork" class="nav-link w-nav-link">Work</a>
+        <a href="/#contactv" class="nav-link w-nav-link">Contact</a>
       </nav>
       <div class="menu-button w-nav-button">
         <div class="w-icon-nav-menu"></div>
@@ -49,7 +49,7 @@
           <div class="text-block">Back</div>
         </a>
       </div>
-      <div class="image-div"><img src="../images/Screen-Shot-2021-09-21-at-6.27.28-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, (max-width: 7723px) 47vw, 3630px" srcset="../images/Screen-Shot-2021-09-21-at-6.27.28-PM.png 500w, ../images/Screen-Shot-2021-09-21-at-6.27.28-PM.png 800w, ../images/Screen-Shot-2021-09-21-at-6.27.28-PM.png 1080w, ../images/Screen-Shot-2021-09-21-at-6.27.28-PM.png 1600w, ../images/Screen-Shot-2021-09-21-at-6.27.28-PM.png 2000w, ../images/Screen-Shot-2021-09-21-at-6.27.28-PM.png 2600w, ../images/Screen-Shot-2021-09-21-at-6.27.28-PM.png 3200w, ../images/Screen-Shot-2021-09-21-at-6.27.28-PM.png 3630w" alt="" class="image-2"><img src="../images/Financial-Transparency-Home---Desktop-v2.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 3428px) 42vw, 1440px" srcset="../images/Financial-Transparency-Home---Desktop-v2.png 500w, ../images/Financial-Transparency-Home---Desktop-v2.png 800w, ../images/Financial-Transparency-Home---Desktop-v2.png 1080w, ../images/Financial-Transparency-Home---Desktop-v2.png 1440w" alt="" class="image-2"><img src="../images/Financial-Transparency-Home---Desktop.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 3428px) 42vw, 1440px" srcset="../images/Financial-Transparency-Home---Desktop.png 500w, ../images/Financial-Transparency-Home---Desktop.png 800w, ../images/Financial-Transparency-Home---Desktop.png 1080w, ../images/Financial-Transparency-Home---Desktop.png 1440w" alt="" class="image-2"><img src="../images/City-of-Dallas-Financial-Transparency-desktop-final.jpg" loading="lazy" sizes="100vw" srcset="../images/City-of-Dallas-Financial-Transparency-desktop-final.jpg 500w, ../images/City-of-Dallas-Financial-Transparency-desktop-final.jpg 800w, ../images/City-of-Dallas-Financial-Transparency-desktop-final.jpg 1080w, ../images/City-of-Dallas-Financial-Transparency-desktop-final.jpg 1600w, ../images/City-of-Dallas-Financial-Transparency-desktop-final.jpg 2000w, ../images/City-of-Dallas-Financial-Transparency-desktop-final.jpg 2600w, ../images/City-of-Dallas-Financial-Transparency-desktop-final.jpg 2604w" alt="" class="image-2"></div>
+      <div class="image-div"><img src="../images/Screen-Shot-2021-09-21-at-6.27.28-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, (max-width: 7723px) 47vw, 3630px" srcset="../images/Screen-Shot-2021-09-21-at-6.27.28-PM-p-500.png 500w, ../images/Screen-Shot-2021-09-21-at-6.27.28-PM-p-800.png 800w, ../images/Screen-Shot-2021-09-21-at-6.27.28-PM-p-1080.png 1080w, ../images/Screen-Shot-2021-09-21-at-6.27.28-PM-p-1600.png 1600w, ../images/Screen-Shot-2021-09-21-at-6.27.28-PM-p-2000.png 2000w, ../images/Screen-Shot-2021-09-21-at-6.27.28-PM-p-2600.png 2600w, ../images/Screen-Shot-2021-09-21-at-6.27.28-PM-p-3200.png 3200w, ../images/Screen-Shot-2021-09-21-at-6.27.28-PM.png 3630w" alt="" class="image-2"><img src="../images/Financial-Transparency-Home---Desktop-v2.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 3428px) 42vw, 1440px" srcset="../images/Financial-Transparency-Home---Desktop-v2-p-500.png 500w, ../images/Financial-Transparency-Home---Desktop-v2-p-800.png 800w, ../images/Financial-Transparency-Home---Desktop-v2-p-1080.png 1080w, ../images/Financial-Transparency-Home---Desktop-v2.png 1440w" alt="" class="image-2"><img src="../images/Financial-Transparency-Home---Desktop.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 3428px) 42vw, 1440px" srcset="../images/Financial-Transparency-Home---Desktop-p-500.png 500w, ../images/Financial-Transparency-Home---Desktop-p-800.png 800w, ../images/Financial-Transparency-Home---Desktop-p-1080.png 1080w, ../images/Financial-Transparency-Home---Desktop.png 1440w" alt="" class="image-2"><img src="../images/City-of-Dallas-Financial-Transparency-desktop-final.jpg" loading="lazy" sizes="100vw" srcset="../images/City-of-Dallas-Financial-Transparency-desktop-final-p-500.jpeg 500w, ../images/City-of-Dallas-Financial-Transparency-desktop-final-p-800.jpeg 800w, ../images/City-of-Dallas-Financial-Transparency-desktop-final-p-1080.jpeg 1080w, ../images/City-of-Dallas-Financial-Transparency-desktop-final-p-1600.jpeg 1600w, ../images/City-of-Dallas-Financial-Transparency-desktop-final-p-2000.jpeg 2000w, ../images/City-of-Dallas-Financial-Transparency-desktop-final-p-2600.jpeg 2600w, ../images/City-of-Dallas-Financial-Transparency-desktop-final.jpg 2604w" alt="" class="image-2"></div>
     </div>
     <div class="columns w-row">
       <div class="column-2 w-col w-col-6"></div>
