--- a/work/oasis-logo-design.html
+++ b/work/oasis-logo-design.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Sep 22 2021 00:15:14 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Sep 22 2021 01:27:13 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="614a729f1f9dc86c85763965" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -26,9 +26,9 @@
       </a>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="../index.html" class="nav-link w-nav-link">Home</a>
-        <a href="#aboutv" class="nav-link w-nav-link">About</a>
-        <a href="#vwork" class="nav-link w-nav-link">Work</a>
-        <a href="#contactv" class="nav-link w-nav-link">Contact</a>
+        <a href="/#aboutv" class="nav-link w-nav-link">About</a>
+        <a href="/#vwork" class="nav-link w-nav-link">Work</a>
+        <a href="/#contactv" class="nav-link w-nav-link">Contact</a>
       </nav>
       <div class="menu-button w-nav-button">
         <div class="w-icon-nav-menu"></div>
