--- a/work/brinks-monitronics-t-shirt-designs.html
+++ b/work/brinks-monitronics-t-shirt-designs.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Sep 22 2021 00:15:14 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Sep 22 2021 01:27:13 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="614a739684d1fabdf583d34e" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -26,9 +26,9 @@
       </a>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="../index.html" class="nav-link w-nav-link">Home</a>
-        <a href="#aboutv" class="nav-link w-nav-link">About</a>
-        <a href="#vwork" class="nav-link w-nav-link">Work</a>
-        <a href="#contactv" class="nav-link w-nav-link">Contact</a>
+        <a href="/#aboutv" class="nav-link w-nav-link">About</a>
+        <a href="/#vwork" class="nav-link w-nav-link">Work</a>
+        <a href="/#contactv" class="nav-link w-nav-link">Contact</a>
       </nav>
       <div class="menu-button w-nav-button">
         <div class="w-icon-nav-menu"></div>
@@ -49,7 +49,7 @@
           <div class="text-block">Back</div>
         </a>
       </div>
-      <div class="image-div"><img src="../images/tshirt-concepts-1800x1200.jpg" loading="lazy" sizes="100vw" srcset="../images/tshirt-concepts-1800x1200.jpg 500w, ../images/tshirt-concepts-1800x1200.jpg 1080w, ../images/tshirt-concepts-1800x1200.jpg 1600w, ../images/tshirt-concepts-1800x1200.jpg 1800w" alt="" class="image-2"></div>
+      <div class="image-div"><img src="../images/tshirt-concepts-1800x1200.jpg" loading="lazy" sizes="100vw" srcset="../images/tshirt-concepts-1800x1200-p-500.jpeg 500w, ../images/tshirt-concepts-1800x1200-p-1080.jpeg 1080w, ../images/tshirt-concepts-1800x1200-p-1600.jpeg 1600w, ../images/tshirt-concepts-1800x1200.jpg 1800w" alt="" class="image-2"></div>
     </div>
     <div class="columns w-row">
       <div class="column-2 w-col w-col-6"></div>
