--- a/work/responsive-city-of-dallas-website-framework.html
+++ b/work/responsive-city-of-dallas-website-framework.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Sep 22 2021 00:15:14 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Sep 22 2021 01:27:13 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="614a64402f7c6c70ad312717" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -26,9 +26,9 @@
       </a>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="../index.html" class="nav-link w-nav-link">Home</a>
-        <a href="#aboutv" class="nav-link w-nav-link">About</a>
-        <a href="#vwork" class="nav-link w-nav-link">Work</a>
-        <a href="#contactv" class="nav-link w-nav-link">Contact</a>
+        <a href="/#aboutv" class="nav-link w-nav-link">About</a>
+        <a href="/#vwork" class="nav-link w-nav-link">Work</a>
+        <a href="/#contactv" class="nav-link w-nav-link">Contact</a>
       </nav>
       <div class="menu-button w-nav-button">
         <div class="w-icon-nav-menu"></div>
@@ -49,7 +49,7 @@
           <div class="text-block">Back</div>
         </a>
       </div>
-      <div class="image-div"><img src="../images/Screen-Shot-2021-09-21-at-6.09.59-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, (max-width: 3121px) 41vw, 1280px" srcset="../images/Screen-Shot-2021-09-21-at-6.09.59-PM.png 500w, ../images/Screen-Shot-2021-09-21-at-6.09.59-PM.png 800w, ../images/Screen-Shot-2021-09-21-at-6.09.59-PM.png 1080w, ../images/Screen-Shot-2021-09-21-at-6.09.59-PM.png 1280w" alt="" class="image-2"><img src="../images/Screen-Shot-2021-09-21-at-6.12.29-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, (max-width: 5124px) 45vw, 2306px" srcset="../images/Screen-Shot-2021-09-21-at-6.12.29-PM.png 500w, ../images/Screen-Shot-2021-09-21-at-6.12.29-PM.png 800w, ../images/Screen-Shot-2021-09-21-at-6.12.29-PM.png 1080w, ../images/Screen-Shot-2021-09-21-at-6.12.29-PM.png 1600w, ../images/Screen-Shot-2021-09-21-at-6.12.29-PM.png 2000w, ../images/Screen-Shot-2021-09-21-at-6.12.29-PM.png 2306w" alt="" class="image-2"></div>
+      <div class="image-div"><img src="../images/Screen-Shot-2021-09-21-at-6.09.59-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, (max-width: 3121px) 41vw, 1280px" srcset="../images/Screen-Shot-2021-09-21-at-6.09.59-PM-p-500.png 500w, ../images/Screen-Shot-2021-09-21-at-6.09.59-PM-p-800.png 800w, ../images/Screen-Shot-2021-09-21-at-6.09.59-PM-p-1080.png 1080w, ../images/Screen-Shot-2021-09-21-at-6.09.59-PM.png 1280w" alt="" class="image-2"><img src="../images/Screen-Shot-2021-09-21-at-6.12.29-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, (max-width: 5124px) 45vw, 2306px" srcset="../images/Screen-Shot-2021-09-21-at-6.12.29-PM-p-500.png 500w, ../images/Screen-Shot-2021-09-21-at-6.12.29-PM-p-800.png 800w, ../images/Screen-Shot-2021-09-21-at-6.12.29-PM-p-1080.png 1080w, ../images/Screen-Shot-2021-09-21-at-6.12.29-PM-p-1600.png 1600w, ../images/Screen-Shot-2021-09-21-at-6.12.29-PM-p-2000.png 2000w, ../images/Screen-Shot-2021-09-21-at-6.12.29-PM.png 2306w" alt="" class="image-2"></div>
     </div>
     <div class="columns w-row">
       <div class="column-2 w-col w-col-6"></div>
