--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Sep 22 2021 01:27:13 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Sep 22 2021 01:34:12 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="606def14871f33430a720657" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -399,7 +399,7 @@
       <div class="about-div">
         <h3 class="heading-four-contact">Get in Touch</h3>
         <p class="paragraph-contact">I&#x27;m currently continuing my education by learning and practicing web accessibility standards in design and front-end development. Also staying up-to-date on the latest trends and techniques in web and design.<br></p>
-        <a href="http://www.linkedin.com/in/vanessasalinas" target="_blank" class="link-block-contact w-inline-block"><img src="images/linkedin-icon-white.svg" loading="lazy" width="24" alt="LinkedIn Icon">
+        <a href="http://www.linkedin.com/in/vanessasalinas" target="_blank" class="link-block-contact w-inline-block"><img src="images/linkedin-icon-white.svg" loading="lazy" width="24" alt="LinkedIn Icon" class="image-3">
           <div class="div-block-2-contact">
             <p class="link-block-text-contact">Connect with me on LinkedIn</p>
           </div>
