--- a/work/dallas-city-hall-style-guide.html
+++ b/work/dallas-city-hall-style-guide.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Sep 22 2021 04:17:28 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Sep 22 2021 13:02:30 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="60ca33936dec8bd86b065f1a" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -64,5 +64,10 @@
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=606def14871f33b3fe720655" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="../js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
+  <script>
+ $('.w-nav-menu').on('click', 'a', function() {
+   $('.w-nav-button').triggerHandler('tap');
+ });
+</script>
 </body>
 </html>
