--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Sep 22 2021 13:02:30 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Sep 22 2021 15:31:16 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="606def14871f33430a720657" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -32,9 +32,9 @@
       </a>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="index.html" aria-current="page" class="nav-link w-nav-link w--current">Home</a>
-        <a href="/#aboutv" class="nav-link w-nav-link">About</a>
-        <a href="/#vwork" class="nav-link w-nav-link">Work</a>
-        <a href="/#contactv" class="nav-link w-nav-link">Contact</a>
+        <a href="http://vanessasalinas.com#aboutv" class="nav-link w-nav-link">About</a>
+        <a href="http://vanessasalinas.com/#vwork" class="nav-link w-nav-link">Work</a>
+        <a href="http://vanessasalinas.com/#contactv" class="nav-link w-nav-link">Contact</a>
       </nav>
       <div class="menu-button w-nav-button">
         <div class="w-icon-nav-menu"></div>
@@ -423,10 +423,5 @@
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=606def14871f33b3fe720655" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
-  <script>
- $('.w-nav-menu').on('click', 'a', function() {
-   $('.w-nav-button').triggerHandler('tap');
- });
-</script>
 </body>
 </html>
