--- a/work/the-presidio-business-card-design.html
+++ b/work/the-presidio-business-card-design.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Sep 23 2021 14:56:19 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Sep 23 2021 15:03:50 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="614a71f890f4f46601309e5b" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -26,9 +26,9 @@
       </a>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="../index.html" class="nav-link w-nav-link">Home</a>
-        <a href="http://vanessasalinas.com#aboutv" class="nav-link w-nav-link">About</a>
-        <a href="http://vanessasalinas.com/#vwork" class="nav-link w-nav-link">Work</a>
-        <a href="http://vanessasalinas.com/#contactv" class="nav-link w-nav-link">Contact</a>
+        <a href="http://vanessasalinas.com/index.html#aboutv" class="nav-link w-nav-link">About</a>
+        <a href="http://vanessasalinas.com/index.html#vwork" class="nav-link w-nav-link">Work</a>
+        <a href="http://vanessasalinas.com/index.html#contactv" class="nav-link w-nav-link">Contact</a>
       </nav>
       <div class="menu-button w-nav-button">
         <div class="w-icon-nav-menu"></div>
