--- a/work/mood-board-concepts-for-the-future-dallas-dot-gov.html
+++ b/work/mood-board-concepts-for-the-future-dallas-dot-gov.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Nov 17 2021 04:51:35 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Nov 17 2021 04:57:11 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61490e987a9d63129fdc95bb" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -50,9 +50,9 @@
         </a>
       </div>
       <div class="image-div">
-        <h5>Vision #1</h5><img src="../images/Mood-Board-v1.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 3428px) 42vw, 1440px" srcset="../images/Mood-Board-v1.jpg 500w, ../images/Mood-Board-v1.jpg 1440w" alt="Mood Board for Vision 1" class="image-2">
-        <h5>Vision #2</h5><img src="../images/Mood-Board-v2.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 3428px) 42vw, 1440px" srcset="../images/Mood-Board-v2.jpg 500w, ../images/Mood-Board-v2.jpg 1440w" alt="Mood Board for Vision 2" class="image-2">
-        <h5>Vision #3</h5><img src="../images/Mood-Board-v3.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 3428px) 42vw, 1440px" srcset="../images/Mood-Board-v3.jpg 500w, ../images/Mood-Board-v3.jpg 800w, ../images/Mood-Board-v3.jpg 1080w, ../images/Mood-Board-v3.jpg 1440w" alt="Mood Board for Vision 3" class="image-2">
+        <h5>Vision #1</h5><img src="../images/Mood-Board-v1.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/Mood-Board-v1-p-500.jpeg 500w, ../images/Mood-Board-v1.jpg 1440w" alt="Mood Board for Vision 1" class="image-2">
+        <h5>Vision #2</h5><img src="../images/Mood-Board-v2.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/Mood-Board-v2-p-500.jpeg 500w, ../images/Mood-Board-v2.jpg 1440w" alt="Mood Board for Vision 2" class="image-2">
+        <h5>Vision #3</h5><img src="../images/Mood-Board-v3.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/Mood-Board-v3-p-500.jpeg 500w, ../images/Mood-Board-v3-p-800.jpeg 800w, ../images/Mood-Board-v3-p-1080.jpeg 1080w, ../images/Mood-Board-v3.jpg 1440w" alt="Mood Board for Vision 3" class="image-2">
       </div>
     </div>
     <div class="columns w-row">
