--- a/work/planning-and-urban-design-website.html
+++ b/work/planning-and-urban-design-website.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Nov 19 2021 23:06:23 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Nov 20 2021 00:20:28 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="614a57cdc01f0f751ac5877b" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -45,18 +45,18 @@
         <div class="stick-content-paragraph-div">
           <p>Worked closely with the PUD department stakeholders, product manager, UX designers and front end developers to create visuals based on sketches and requirements from the department.<br><strong><br>Role:</strong> UI Designer<br><strong>Programs:</strong> Adobe XD, Illustrator &amp; Photoshop<br><strong>Year:</strong> 2020<br><br><strong>Challenges:</strong> Working with a department who had their own ideas and mockups of what they wanted their website to look like but with no website standards used. Tasked with bringing these ideas under the City of Dallas style guide standards. Including fonts, colors, components and compliant with web accessibility.<br><br><strong>Project Outcome:</strong> Through close collaboration and an extensive iterative process the department was very satisfied with the final product and expressed that it met their overall purpose of a creative, dynamic and focused online presence to expand the reach of the department’s message, publications, support efforts in educating, informing and encouraging involvement in planning for the city’s future.</p>
         </div>
-        <a href="javascript:history.back();" class="link-block-2 w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="24px" alt="Left Arrow Icon">
+        <a href="javascript:history.back();" class="link-block-2 w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="(max-width: 479px) 100vw, 24px" alt="Left Arrow Icon">
           <div class="text-block">Back</div>
         </a>
       </div>
       <div class="image-div">
         <div class="sticky-contact-scroll-indicator">
-          <a href="#Footer" class="scroll-link-black w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="24px" alt="Left Arrow Icon" class="scroll-down">
+          <a href="#Footer" class="scroll-link-black w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="(max-width: 479px) 100vw, 24px" alt="Left Arrow Icon" class="scroll-down">
             <div class="scroll-text">Scroll</div>
           </a>
         </div>
         <a href="#" class="lightbox-link w-inline-block w-lightbox">
-          <h5>IA/User Flow</h5><img src="../images/Screen-Shot-2021-09-21-at-5.04.08-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/Screen-Shot-2021-09-21-at-5.04.08-PM-p-500.png 500w, ../images/Screen-Shot-2021-09-21-at-5.04.08-PM-p-800.png 800w, ../images/Screen-Shot-2021-09-21-at-5.04.08-PM-p-1080.png 1080w, ../images/Screen-Shot-2021-09-21-at-5.04.08-PM-p-1600.png 1600w, ../images/Screen-Shot-2021-09-21-at-5.04.08-PM-p-2000.png 2000w, ../images/Screen-Shot-2021-09-21-at-5.04.08-PM.png 2498w" alt="" class="image-2">
+          <h5>IA/User Flow</h5><img src="../images/Screen-Shot-2021-09-21-at-5.04.08-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/Screen-Shot-2021-09-21-at-5.04.08-PM-p-500.png 500w, ../images/Screen-Shot-2021-09-21-at-5.04.08-PM-p-800.png 800w, ../images/Screen-Shot-2021-09-21-at-5.04.08-PM-p-1080.png 1080w, ../images/Screen-Shot-2021-09-21-at-5.04.08-PM-p-1600.png 1600w, ../images/Screen-Shot-2021-09-21-at-5.04.08-PM-p-2000.png 2000w, ../images/Screen-Shot-2021-09-21-at-5.04.08-PM.png 2498w" alt="PUD Website Outline of Information Architecture" class="image-2">
           <script type="application/json" class="w-json">{
   "items": [
     {
@@ -74,7 +74,7 @@
 }</script>
         </a>
         <a href="#" class="lightbox-link w-inline-block w-lightbox">
-          <h5>Client&#x27;s Website Ideas/Mockups</h5><img src="../images/PUD-Client-Mockups.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/PUD-Client-Mockups.jpg 500w, ../images/PUD-Client-Mockups.jpg 800w, ../images/PUD-Client-Mockups.jpg 1080w, ../images/PUD-Client-Mockups.jpg 1600w, ../images/PUD-Client-Mockups.jpg 2000w, ../images/PUD-Client-Mockups.jpg 2600w, ../images/PUD-Client-Mockups.jpg 3200w, ../images/PUD-Client-Mockups.jpg 3584w" alt="" class="image-2">
+          <h5>Client&#x27;s Website Ideas/Mockups</h5><img src="../images/PUD-Client-Mockups.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/PUD-Client-Mockups-p-500.jpeg 500w, ../images/PUD-Client-Mockups-p-800.jpeg 800w, ../images/PUD-Client-Mockups-p-1080.jpeg 1080w, ../images/PUD-Client-Mockups-p-1600.jpeg 1600w, ../images/PUD-Client-Mockups-p-2000.jpeg 2000w, ../images/PUD-Client-Mockups-p-2600.jpeg 2600w, ../images/PUD-Client-Mockups-p-3200.jpeg 3200w, ../images/PUD-Client-Mockups.jpg 3584w" alt="A view of the clients ideas and mockup of website pages" class="image-2">
           <script type="application/json" class="w-json">{
   "items": [
     {
@@ -93,7 +93,7 @@
 }</script>
         </a>
         <a href="#" class="lightbox-link w-inline-block w-lightbox">
-          <h5>UI / Iterative Process</h5><img src="../images/Screen-Shot-2021-09-21-at-5.18.18-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/Screen-Shot-2021-09-21-at-5.18.18-PM-p-500.png 500w, ../images/Screen-Shot-2021-09-21-at-5.18.18-PM-p-800.png 800w, ../images/Screen-Shot-2021-09-21-at-5.18.18-PM-p-1080.png 1080w, ../images/Screen-Shot-2021-09-21-at-5.18.18-PM-p-1600.png 1600w, ../images/Screen-Shot-2021-09-21-at-5.18.18-PM-p-2000.png 2000w, ../images/Screen-Shot-2021-09-21-at-5.18.18-PM-p-2600.png 2600w, ../images/Screen-Shot-2021-09-21-at-5.18.18-PM-p-3200.png 3200w, ../images/Screen-Shot-2021-09-21-at-5.18.18-PM.png 3806w" alt="" class="image-2">
+          <h5>UI / Iterative Process</h5><img src="../images/Screen-Shot-2021-09-21-at-5.18.18-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/Screen-Shot-2021-09-21-at-5.18.18-PM-p-500.png 500w, ../images/Screen-Shot-2021-09-21-at-5.18.18-PM-p-800.png 800w, ../images/Screen-Shot-2021-09-21-at-5.18.18-PM-p-1080.png 1080w, ../images/Screen-Shot-2021-09-21-at-5.18.18-PM-p-1600.png 1600w, ../images/Screen-Shot-2021-09-21-at-5.18.18-PM-p-2000.png 2000w, ../images/Screen-Shot-2021-09-21-at-5.18.18-PM-p-2600.png 2600w, ../images/Screen-Shot-2021-09-21-at-5.18.18-PM-p-3200.png 3200w, ../images/Screen-Shot-2021-09-21-at-5.18.18-PM.png 3806w" alt="Various UI Mockups for different pages of the site" class="image-2">
           <script type="application/json" class="w-json">{
   "items": [
     {
@@ -112,7 +112,7 @@
 }</script>
         </a>
         <a href="#" class="lightbox-link w-inline-block w-lightbox">
-          <h5>Final UI Mockups</h5><img src="../images/Screen-Shot-2021-09-21-at-5.06.55-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/Screen-Shot-2021-09-21-at-5.06.55-PM-p-500.png 500w, ../images/Screen-Shot-2021-09-21-at-5.06.55-PM-p-800.png 800w, ../images/Screen-Shot-2021-09-21-at-5.06.55-PM-p-1080.png 1080w, ../images/Screen-Shot-2021-09-21-at-5.06.55-PM-p-1600.png 1600w, ../images/Screen-Shot-2021-09-21-at-5.06.55-PM.png 1992w" alt="" class="image-2">
+          <h5>Final UI Mockups</h5><img src="../images/Screen-Shot-2021-09-21-at-5.06.55-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/Screen-Shot-2021-09-21-at-5.06.55-PM-p-500.png 500w, ../images/Screen-Shot-2021-09-21-at-5.06.55-PM-p-800.png 800w, ../images/Screen-Shot-2021-09-21-at-5.06.55-PM-p-1080.png 1080w, ../images/Screen-Shot-2021-09-21-at-5.06.55-PM-p-1600.png 1600w, ../images/Screen-Shot-2021-09-21-at-5.06.55-PM.png 1992w" alt="Final mockups of the homepage and about page" class="image-2">
           <script type="application/json" class="w-json">{
   "items": [
     {
@@ -132,10 +132,9 @@
         </a>
       </div>
     </div>
-    <div class="columns w-row">
-      <div class="column-2 w-col w-col-6"></div>
-      <div class="column-3 w-col w-col-6"></div>
-    </div>
+    <a href="javascript:history.back();" class="backmobile w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="(max-width: 479px) 24px, 100vw" alt="Left Arrow Icon">
+      <div class="text-block">Back</div>
+    </a>
   </div>
   <div id="Footer" class="footer wf-section">
     <div class="footer-div">
